fix horizontal scroll

--- a/src/css/container.css
+++ b/src/css/container.css
@@ -12,7 +12,7 @@
   }
 }
 /* Styles for Desktop devices */
-@media only screen and (min-width: 1459px) {
+@media only screen and (min-width: 1460px) {
   .container {
     max-width: 1460px;
   }
